create and view projects

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "kewler": "^1.0.8",
     "leaflet-map": "^0.2.1",
     "medium-editor": "^5.23.3",
+    "medium-editor-handsontable": "^0.1.3",
     "moment": "^2.22.1",
     "normalize.css": "7.0.0",
     "v-tooltip": "^2.0.0-rc.30",
